include/wrap/RTIambServices.h

ccall void *wrap_new_RTIambassador(void **out_exc);
ccall void wrap_delete_RTIambassador(void *amb, void **out_exc);
////////////////////////////////////
// Federation Management Services //
////////////////////////////////////

ccall void wrap_createFederationExecution(void *amb, const char *executionName, const char *fed, void **out_exc);
ccall void wrap_destroyFederationExecution(void *amb, const char *executionName, void **out_exc);
ccall RTI_ULong wrap_joinFederationExecution (void *amb, const char *yourName, const char *executionName, void *federateAmbassadorReference, void **out_exc);
ccall void wrap_resignFederationExecution(void *amb, int theAction, void **out_exc);
ccall void wrap_registerFederationSynchronizationPoint(void *amb, const char *label, const char *theTag, void **out_exc);
ccall void wrap_registerFederationSynchronizationPoint_with_syncSet(void *amb, const char *label, const char *theTag, void *syncSet, void **out_exc);
ccall void wrap_synchronizationPointAchieved(void *amb, const char *label, void **out_exc);
ccall void wrap_requestFederationSaveAtTime(void *amb, const char *label, void *theTime, void **out_exc);
ccall void wrap_requestFederationSave(void *amb, const char *label, void **out_exc);
ccall void wrap_federateSaveBegun(void *amb, void **out_exc);
ccall void wrap_federateSaveComplete(void *amb, void **out_exc);
ccall void wrap_federateSaveNotComplete(void *amb, void **out_exc);
ccall void wrap_requestFederationRestore(void *amb, const char *label, void **out_exc);
ccall void wrap_federateRestoreComplete(void *amb, void **out_exc);
ccall void wrap_federateRestoreNotComplete(void *amb, void **out_exc);
/////////////////////////////////////
// Declaration Management Services //
/////////////////////////////////////

ccall void wrap_publishObjectClass(void *amb, RTI_ULong theClass, void *attributeList, void **out_exc);
ccall void wrap_unpublishObjectClass(void *amb, RTI_ULong theClass, void **out_exc);
ccall void wrap_publishInteractionClass(void *amb, RTI_ULong theClass, void **out_exc);
ccall void wrap_unpublishInteractionClass(void *amb, RTI_ULong theClass, void **out_exc);
ccall void wrap_subscribeObjectClassAttributes(void *amb, RTI_ULong theClass, void *attributeList, void **out_exc);
ccall void wrap_unsubscribeObjectClass(void *amb, RTI_ULong theClass, void **out_exc);
ccall void wrap_subscribeInteractionClass(void *amb, RTI_ULong theClass, HsBool active, void **out_exc);
ccall void wrap_unsubscribeInteractionClass(void *amb, RTI_ULong theClass, void **out_exc);
////////////////////////////////
// Object Management Services //
////////////////////////////////

ccall RTI_ULong wrap_registerObjectInstance_withName(void *amb, RTI_ULong theClass, const char *theObject, void **out_exc);
ccall RTI_ULong wrap_registerObjectInstance(void *amb, RTI_ULong theClass, void **out_exc);
ccall void wrap_updateAttributeValuesAtTime(void *amb, RTI_ULong theObject, void *theAttributes, void *theTime, const char *theTag, RTI_ULong *out_uniq, RTI_ULong *out_fedHandle, void **out_exc);
ccall void wrap_updateAttributeValues(void *amb, RTI_ULong theObject, void *theAttributes, const char *theTag, void **out_exc);
ccall RTI_ULong wrap_sendInteractionAtTime(void *amb, RTI_ULong theInteraction, void *theParameters, void *theTime, const char *theTag, RTI_ULong *out_uniq, RTI_ULong *out_fedHandle, void **out_exc);
ccall void wrap_sendInteraction(void *amb, RTI_ULong theInteraction, void *theParameters, const char *theTag, void **out_exc);
ccall void wrap_deleteObjectInstanceAtTime(void *amb, RTI_ULong theObject, void *theTime, const char *theTag, RTI_ULong *out_uniq, RTI_ULong *out_fedHandle, void **out_exc);
ccall void wrap_deleteObjectInstance(void *amb, RTI_ULong theObject, const char *theTag, void **out_exc);
ccall void wrap_localDeleteObjectInstance(void *amb, RTI_ULong theObject, void **out_exc);
ccall void wrap_changeAttributeTransportationType(void *amb, RTI_ULong theObject, void *theAttributes, RTI_ULong theType, void **out_exc);
ccall void wrap_changeInteractionTransportationType(void *amb, RTI_ULong theClass, RTI_ULong theType, void **out_exc);
ccall void wrap_requestObjectAttributeValueUpdate(void *amb, RTI_ULong theObject, void *attributeList, void **out_exc);
ccall void wrap_requestClassAttributeValueUpdate(void *amb, RTI_ULong theClass, void *attributeList, void **out_exc);
///////////////////////////////////
// Ownership Management Services //
///////////////////////////////////

ccall void wrap_unconditionalAttributeOwnershipDivestiture(void *amb, RTI_ULong theObject, void *theAttributes, void **out_exc);
ccall void wrap_negotiatedAttributeOwnershipDivestiture(void *amb, RTI_ULong theObject, void *theAttributes, char *theTag, void **out_exc);
ccall void wrap_attributeOwnershipAcquisition(void *amb, RTI_ULong theObject, void *theAttributes, char *theTag, void **out_exc);
ccall void wrap_attributeOwnershipAcquisitionIfAvailable(void *amb, RTI_ULong theObject, void *theAttributes, void **out_exc);
ccall void *wrap_attributeOwnershipReleaseResponse(void *amb, RTI_ULong theObject, void *theAttributes, void **out_exc);
ccall void wrap_cancelNegotiatedAttributeOwnershipDivestiture(void *amb, RTI_ULong theObject, void *theAttributes, void **out_exc);
ccall void wrap_cancelAttributeOwnershipAcquisition(void *amb, RTI_ULong theObject, void *theAttributes, void **out_exc);
ccall void wrap_queryAttributeOwnership(void *amb, RTI_ULong theObject, RTI_ULong theAttribute, void **out_exc);
ccall HsBool wrap_isAttributeOwnedByFederate(void *amb, RTI_ULong theObject, RTI_ULong theAttribute, void **out_exc);
//////////////////////////////
// Time Management Services //
//////////////////////////////

ccall void wrap_enableTimeRegulation(void *amb, const void *theFederateTime, const void *theLookahead, void **out_exc);
ccall void wrap_disableTimeRegulation(void *amb, void **out_exc);